Improve variables names (#7)

--- a/source/blocks/button-info/button-info.scss
+++ b/source/blocks/button-info/button-info.scss
@@ -37,7 +37,7 @@
     min-width: 10rem;
     margin-left: 0.5rem;
     padding: 0.5rem;
-    background: $color_back;
+    background: $color_background;
     border-radius: 0.4rem;
     box-shadow: 0 0 0.5rem $color_main-25;
     color: $color_main-50;
