--- a/source/blocks/comment/comment.scss
+++ b/source/blocks/comment/comment.scss
@@ -19,7 +19,7 @@
     width: 4.8rem;
     height: 4.8rem;
     margin-bottom: 1rem;
-    border: 0.2rem solid $color_back;
+    border: 0.2rem solid $color_background;
     border-radius: 50%;
     box-shadow: 0 1rem 2rem $color_main-10;
     user-select: none;
