--- a/source/blocks/input-field/input-field.scss
+++ b/source/blocks/input-field/input-field.scss
@@ -22,7 +22,7 @@
     width: 100%;
     height: 4.4rem;
     padding: 0 1.5rem;
-    background: $color_back;
+    background: $color_background;
     border: 0.1rem solid $color_main-25;
     border-radius: 0.4rem;
     color: $color_main-75;
