--- a/source/blocks/rating/rating.scss
+++ b/source/blocks/rating/rating.scss
@@ -6,9 +6,9 @@
 
   &__icon {
     display: inline-block;
-    background: $color-grad_prim;
+    background: $gradient_first;
     background-clip: text;
     -webkit-text-fill-color: transparent; // WebKit only
-    color: $color_prim;
+    color: $color_first;
   }
 }
