--- a/source/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/source/pages/ui-kit/headers-footers/headers-footers.pug
@@ -25,8 +25,8 @@ block content
             { text: 'Соглашение 2', href: '#mock-address' }
           ] },
         ],
-        fstBtn: { text: 'Войти', href: '#mock-address' },
-        sndBtn: { text: 'Зарегистрироваться', href: '#mock-address' },
+        firstButton: { text: 'Войти', href: '#mock-address' },
+        secondButton: { text: 'Зарегистрироваться', href: '#mock-address' },
         homeHref: '#mock-address',
       })
 
