--- a/source/pages/website/_layout.pug
+++ b/source/pages/website/_layout.pug
@@ -47,8 +47,8 @@ html(lang="ru")
             { text: 'Соглашение 2', href: '#mock-address' }
           ] },
         ],
-        fstBtn: { text: 'Войти', href: './sign-in.html' },
-        sndBtn: { text: 'Зарегистрироваться', href: './registration.html' },
+        firstButton: { text: 'Войти', href: './sign-in.html' },
+        secondButton: { text: 'Зарегистрироваться', href: './registration.html' },
         homeHref: './landing-page.html',
       })
 
