--- a/source/pages/website/landing-page/landing-page.scss
+++ b/source/pages/website/landing-page/landing-page.scss
@@ -5,7 +5,7 @@
   height: 100%;
   max-height: 83rem;
   padding: 7rem 1.5rem 2rem;
-  background: $color_back url('./img/landing-page__background.png')
+  background: $color_background url('./img/landing-page__background.png')
     bottom/cover no-repeat;
 
   &__container {
