--- a/source/pages/website/room-details/room-details.scss
+++ b/source/pages/website/room-details/room-details.scss
@@ -3,7 +3,7 @@ $height_reviews: 30.7rem;
 
 .room-details {
   width: 100%;
-  background: $color_back;
+  background: $color_background;
   border-bottom: 0.1rem solid $color_main-25;
 
   &__images {
