--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -16,17 +16,18 @@ $breakpoint_mobile-l: 'screen and (max-width: 425px)';
 $breakpoint_mobile-m: 'screen and (max-width: 375px)';
 $breakpoint_mobile-s: 'screen and (max-width: 320px)';
 
-$color_back: #FFF;
+$color_background: #FFF;
 $color_main: #1F2041;
-$color_prim: #BC9CFF;
-$color_sec: #6FCF97;
-$color-grad_prim: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-$color-grad_prim-50: linear-gradient(180deg, rgba($color: #BC9CFF, $alpha: 0.5) 0%, rgba($color: #8BA4F9, $alpha: 0.5) 100%);
-$color-grad_prim-25: linear-gradient(180deg, rgba($color: #BC9CFF, $alpha: 0.25) 0%, rgba($color: #8BA4F9, $alpha: 0.25) 100%);
-$color-grad_sec: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+$color_first: #BC9CFF;
+$color_second: #6FCF97;
 
 $color_main-75: rgba($color: $color_main, $alpha: 0.75);
 $color_main-50: rgba($color: $color_main, $alpha: 0.5);
 $color_main-25: rgba($color: $color_main, $alpha: 0.25);
 $color_main-10: rgba($color: $color_main, $alpha: 0.1);
 $color_main-5: rgba($color: $color_main, $alpha: 0.05);
+
+$gradient_first: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$gradient_first-50: linear-gradient(180deg, rgba($color: #BC9CFF, $alpha: 0.5) 0%, rgba($color: #8BA4F9, $alpha: 0.5) 100%);
+$gradient_first-25: linear-gradient(180deg, rgba($color: #BC9CFF, $alpha: 0.25) 0%, rgba($color: #8BA4F9, $alpha: 0.25) 100%);
+$gradient_second: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
