--- a/source/blocks/card-book/card-book.scss
+++ b/source/blocks/card-book/card-book.scss
@@ -5,7 +5,7 @@
   max-width: 38rem;
   max-height: 51.1rem;
   padding: 4rem 1rem 3rem;
-  background: $color_back;
+  background: $color_background;
   border: 0.1rem solid $color_main-10;
   border-radius: 0.4rem;
   box-shadow: 0 0 2.5rem $color_main-25;
@@ -31,7 +31,7 @@
 
   &__header-room-number {
     width: 5.5rem;
-    background: $color_back;
+    background: $color_background;
     border: 0;
     outline: none;
     color: $color_main;
@@ -42,7 +42,7 @@
 
   &__header-room-type {
     margin-left: 0.2rem;
-    color: $color_prim;
+    color: $color_first;
     font-size: $font-size_h3;
     text-transform: uppercase;
   }
