--- a/source/blocks/card-calendar/card-calendar.scss
+++ b/source/blocks/card-calendar/card-calendar.scss
@@ -31,13 +31,13 @@
       font-weight: bold;
 
       &:hover {
-        background: $color-grad_prim-25;
+        background: $gradient_first-25;
       }
     }
 
     .datepicker--nav-action {
       width: max-content;
-      color: $color_prim;
+      color: $color_first;
 
       &:hover {
         background: none;
@@ -55,7 +55,7 @@
 
     .datepicker--day-name {
       height: 4rem;
-      color: $color_prim;
+      color: $color_first;
       font-family: $font-family_h3;
       font-size: $font-size_h3;
       font-weight: bold;
@@ -66,7 +66,7 @@
       color: $color_main-50;
 
       &:hover {
-        background: $color-grad_prim-25;
+        background: $gradient_first-25;
       }
     }
 
@@ -81,22 +81,22 @@
     }
 
     .datepicker--cell.-current- {
-      background: $color-grad_sec;
-      color: $color_back;
+      background: $gradient_second;
+      color: $color_background;
       font-weight: bold;
     }
 
     .datepicker--cell.-in-range- {
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
       border-radius: 0;
     }
 
     .datepicker--cell.-range-from- {
-      background: $color-grad_prim;
+      background: $gradient_first;
     }
 
     .datepicker--cell.-range-to- {
-      background: $color-grad_prim;
+      background: $gradient_first;
     }
 
     .datepicker--cell.-range-from-::after {
@@ -107,7 +107,7 @@
       display: inline-block;
       width: 2rem;
       height: 4rem;
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
     }
 
     .datepicker--cell.-selected-.-range-from-::after {
@@ -122,7 +122,7 @@
       display: inline-block;
       width: 2rem;
       height: 4rem;
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
     }
 
     .datepicker--cell.-selected-.-range-to-::before {
@@ -130,8 +130,8 @@
     }
 
     .datepicker--cell.-selected- {
-      background: $color-grad_prim;
-      color: $color_back;
+      background: $gradient_first;
+      color: $color_background;
       font-weight: bold;
     }
 
@@ -158,7 +158,7 @@
     }
 
     .datepicker--button[data-action='hide'] {
-      color: $color_prim;
+      color: $color_first;
     }
   }
 }
