--- a/source/blocks/card-signin/card-signin.scss
+++ b/source/blocks/card-signin/card-signin.scss
@@ -5,7 +5,7 @@
   max-width: 38rem;
   max-height: 35.8rem;
   padding: 4rem 1rem 3rem;
-  background: $color_back;
+  background: $color_background;
   border: 0.1rem solid $color_main-10;
   border-radius: 0.4rem;
   box-shadow: 0 0 2.5rem $color_main-25;
