--- a/source/blocks/dropdown-date/dropdown-date.scss
+++ b/source/blocks/dropdown-date/dropdown-date.scss
@@ -83,13 +83,13 @@
       font-weight: bold;
 
       &:hover {
-        background: $color-grad_prim-25;
+        background: $gradient_first-25;
       }
     }
 
     .datepicker--nav-action {
       width: max-content;
-      color: $color_prim;
+      color: $color_first;
 
       &:hover {
         background: none;
@@ -107,7 +107,7 @@
 
     .datepicker--day-name {
       height: 4rem;
-      color: $color_prim;
+      color: $color_first;
       font-family: $font-family_h3;
       font-size: $font-size_h3;
       font-weight: bold;
@@ -118,7 +118,7 @@
       color: $color_main-50;
 
       &:hover {
-        background: $color-grad_prim-25;
+        background: $gradient_first-25;
       }
     }
 
@@ -133,22 +133,22 @@
     }
 
     .datepicker--cell.-current- {
-      background: $color-grad_sec;
-      color: $color_back;
+      background: $gradient_second;
+      color: $color_background;
       font-weight: bold;
     }
 
     .datepicker--cell.-in-range- {
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
       border-radius: 0;
     }
 
     .datepicker--cell.-range-from- {
-      background: $color-grad_prim;
+      background: $gradient_first;
     }
 
     .datepicker--cell.-range-to- {
-      background: $color-grad_prim;
+      background: $gradient_first;
     }
 
     .datepicker--cell.-range-from-::after {
@@ -159,7 +159,7 @@
       display: inline-block;
       width: 2rem;
       height: 4rem;
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
     }
 
     .datepicker--cell.-selected-.-range-from-::after {
@@ -174,7 +174,7 @@
       display: inline-block;
       width: 2rem;
       height: 4rem;
-      background: $color-grad_prim-25;
+      background: $gradient_first-25;
     }
 
     .datepicker--cell.-selected-.-range-to-::before {
@@ -182,8 +182,8 @@
     }
 
     .datepicker--cell.-selected- {
-      background: $color-grad_prim;
-      color: $color_back;
+      background: $gradient_first;
+      color: $color_background;
       font-weight: bold;
     }
 
@@ -210,7 +210,7 @@
     }
 
     .datepicker--button[data-action='hide'] {
-      color: $color_prim;
+      color: $color_first;
     }
   }
 }
