--- a/source/blocks/dropdown-list/dropdown-list.scss
+++ b/source/blocks/dropdown-list/dropdown-list.scss
@@ -47,7 +47,7 @@
     z-index: 10;
     width: 100%;
     padding: 0 0.7rem 0 1.4rem;
-    background: $color_back;
+    background: $color_background;
     border: 0.1rem solid $color_main-50;
     border-top: 0;
     border-radius: 0 0 0.4rem 0.4rem;
@@ -88,7 +88,7 @@
     align-items: center;
   }
 
-  &__item-btn {
+  &__item-button {
     width: 3rem;
     height: 3rem;
     background: none;
@@ -131,7 +131,7 @@
     margin-bottom: 1.2rem;
   }
 
-  &__btn {
+  &__button {
     &_inactive {
       visibility: hidden;
     }
