--- a/source/blocks/pagination/pagination.pug
+++ b/source/blocks/pagination/pagination.pug
@@ -4,9 +4,9 @@ mixin pagination({ itemsNumber = 1, itemsPerPage = 1, baseHref = '', addDescript
   -
     const blockName = 'pagination';
     const wrapperClass = [blockName, `js-${blockName}`];
-    const pageBtnClass = [`${blockName}__button-page`, `js-${blockName}__button-page`];
+    const pageButtonClass = [`${blockName}__button-page`, `js-${blockName}__button-page`];
     const dotsClass = [`${blockName}__dots`, `js-${blockName}__dots`];
-    const nextBtnClass = [`${blockName}__button-next`, `js-${blockName}__button-next`];
+    const nextButtonClass = [`${blockName}__button-next`, `js-${blockName}__button-next`];
     const counterClass = [`${blockName}__counter`, `js-${blockName}__counter`];
     const pagesNumber = Math.ceil(itemsNumber / itemsPerPage);
 
@@ -19,14 +19,14 @@ mixin pagination({ itemsNumber = 1, itemsPerPage = 1, baseHref = '', addDescript
       span(class=`${blockName}__buttons-pages js-${blockName}__buttons-pages`)
         - for (let i = 1; i <= pagesNumber; i++) {
             if (baseHref)
-              a(class=pageBtnClass, data-page=i, href=`${baseHref}/page-${i}`) #{i}
+              a(class=pageButtonClass, data-page=i, href=`${baseHref}/page-${i}`) #{i}
             else
-              button(class=pageBtnClass, data-page=i) #{i}
+              button(class=pageButtonClass, data-page=i) #{i}
             if (i === 1 || i === pagesNumber - 1)
               i(class=dotsClass) ...
         - }
-      span(class=nextBtnClass)
-        +button({ btnStyle: 'as-page as-page_alt', withArrow: true })
+      span(class=nextButtonClass)
+        +button({ buttonStyle: 'as-page as-page_alt', withArrow: true })
     div(class=`${blockName}__description`)
       span(class=counterClass)
         | 1 &ndash; #{itemsPerPage} из 
