--- a/source/pages/website/sign-in/sign-in.scss
+++ b/source/pages/website/sign-in/sign-in.scss
@@ -3,7 +3,7 @@
 .sign-in {
   width: 100%;
   padding: 17.1rem 1.5rem 17.3rem;
-  background: $color_back url('./img/sign-in__background.png')
+  background: $color_background url('./img/sign-in__background.png')
     bottom/cover no-repeat;
 
   &__container {
