--- a/source/styles/global.scss
+++ b/source/styles/global.scss
@@ -11,7 +11,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background: $color_back;
+  background: $color_background;
   color: $color_main;
   font-size: 62.5%; // 1rem = 10px
 
